Added support for highlight text with custom color